feat: layout chat in loop

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -15,6 +15,12 @@
         <!-- HERO -->
         <section class="tc-hero">
 
+            <!-- CORNER LOGO -->
+            <div class="tc-corner-logo">
+                <img src="/images/ToffieCrispNapis.svg" alt="Toffiecrisp">
+            </div>
+
+
             <div class="tc-hero-overlay"></div>
 
             <!-- INFO BUBBLES -->
