--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -24,7 +24,7 @@
             <!-- CHAT – LEWA STRONA -->
             <div class="tc-chat-bubbles">
                 <div class="chat-bubble user">Cześć, jestem Krzyś 👋</div>
-                <div class="chat-bubble bot">Witaj! Jestem Toffiecrisp 😊<br>Twój najlepszy przyjaciel!</div>
+                <div class="chat-bubble bot">Witaj Krzysiu!<br> Tu Toffiecrisp Twój najlepszy przyjaciel!😊</div>
                 <div class="chat-bubble user">Świetnie! :D Opowiedz mi jakiś dowcip</div>
                 <div class="chat-bubble bot">
                     Dlaczego miś nie pije kawy? ☕<br>
