feat: admin panel

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -84,7 +84,7 @@
 
                 <p class="tc-lead">
                     Wesoły i bezpieczny kumpel do rozmów<br>
-                    dla dzieci do 12 lat
+                    dla dzieci.
                 </p>
 
                 <a href="https://wa.me/48880294863?text=Cześć%20Toffiecrisp!" target="_blank" class="tc-cta">
