--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -59,7 +59,7 @@
             dla dzieci.
           </p>
 
-          <a href="https://wa.me/48880294863?text=Cześć%20Toffiecrisp!"
+          <a href="https://wa.me/48662323495?text=Cześć%20Toffiecrisp!"
              target="_blank"
              class="tc-cta">
             Napisz do Toffiecrispa 💬
@@ -86,7 +86,7 @@
 
             <a href="https://wa.me/48880294863?text=Cześć%20Toffiecrisp!"
                target="_blank">
-              <img src="/images/qr-whatsapp.png" alt="QR WhatsApp">
+              <img src="/images/qr-whatsapp_v1.png" alt="QR WhatsApp">
             </a>
 
             <div class="tc-qr-hint">
